# nano-inference

./: .cz.toml  .gitignore  .pre-commit-config.yaml  GEMINI.md  PLAN.md  README.md  pyproject.toml
configs/: default.yaml
examples/: fetch_metrics.py  run_hf_inferencer.py  run_server.py  run_torch_inferencer.py  send_chat_request.py  send_concurrent_requests.py  send_request.py
src/nano_inference/api/: __init__.py  protocol.py  server.py
src/nano_inference/core/: config.py  context.py  request.py  sampling.py
src/nano_inference/driver/: __init__.py  driver.py  output_processor.py  response_manager.py
src/nano_inference/engine/: __init__.py  context_builder.py  engine.py
src/nano_inference/envs/: __init__.py  utils.py
src/nano_inference/inferencer/: __init__.py  base.py  factory.py  hf_inferencer.py  torch_inferencer.py
src/nano_inference/input_processor/: __init__.py  bare.py  base.py  chat_template.py  vlm.py
tests/: conftest.py  run_tests_with_timeout.py
tests/smoke/: test_api.py  test_async_driver.py  test_driver_stack.py  test_hf_inferencer.py  test_torch_inferencer.py  test_torch_vlm_inferencer.py
tests/unit/: test_attention.py  test_context_builder.py  test_embedding.py  test_kv_allocator.py  test_metrics.py  test_mlp.py  test_model_loader.py  test_mrope.py  test_norm.py  test_orca_scheduler.py  test_output_processor.py  test_preemption.py  test_qwen3.py  test_request_lifecycle.py  test_rotary.py  test_sampler.py  test_type_hints.py  test_vision_encoder.py  test_vlm_input_processor.py
tests/utils/: __init__.py  model_utils.py
(+29 files in other folders)
