[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nano_inference"]

[project]
name = "nano-inference"
version = "0.0.1"
description = "Nano Inference Server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "numpy>=2.4.4",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "transformers>=4.51.0",
    "accelerate>=1.6.0",
    "pillow>=10.0.0",
    "qwen-vl-utils>=0.0.10",
    "uvicorn>=0.44.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.8.0",
    "ruff>=0.3.5",
    "commitizen>=3.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.pytest.ini_options]
norecursedirs = ["reference"]
markers = [
    "smoke: marks tests as smoke tests (quick end-to-end sanity checks)",
]
asyncio_mode = "auto"
